@@ -1,3 +1,12 @@
+1998-09-24  Samuel Tardieu  <sam@inf.enst.fr>
+
+	* xe_stubs.adb: Use -s for linking to strip an executable rather
+	than calling Execute_Strip.
+
+	* xe_utils.ads, xe_utils.adb: Remove procedure Execute_Strip since 
+	we do now stripping using the -s flag (strip does not work well on 
+	Windows NT and erases the resources).
+
 1998-08-20  Samuel Tardieu  <sam@inf.enst.fr>
 
 	* xe_utils.adb: Change instances of Dont_Execute by Do_Not_Execute 
